--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "react": "18.0.0",
     "react-native": "0.69.3",
     "react-native-dotenv": "^3.3.1",
+    "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^2.5.0",
+    "react-native-hyperlink": "^0.0.19",
     "react-native-maps": "^1.2.0",
+    "react-native-material-dropdown": "^0.11.1",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
