--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
+    "axios": "^0.27.2",
     "react": "18.0.0",
     "react-native": "0.69.3",
     "react-native-dotenv": "^3.3.1",
@@ -28,7 +29,12 @@
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
     "react-native-screens": "^3.15.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-sliding-up-down-panels": "^1.0.0",
+    "react-native-stopwatch-timer": "^0.0.21",
+    "react-native-swipe-up-down": "^1.2.0",
+    "react-native-vector-icons": "^9.2.0",
+    "react-timecode": "^1.2.0",
+    "react-timer-wrapper": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
