--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
+    "@stripe/stripe-react-native": "^0.26.0",
     "axios": "^0.27.2",
     "react": "18.0.0",
     "react-native": "0.69.3",
+    "react-native-camera": "^4.2.1",
     "react-native-dotenv": "^3.3.1",
     "react-native-dropdown-picker": "^5.4.2",
     "react-native-gesture-handler": "^2.5.0",
@@ -34,7 +36,8 @@
     "react-native-swipe-up-down": "^1.2.0",
     "react-native-vector-icons": "^9.2.0",
     "react-timecode": "^1.2.0",
-    "react-timer-wrapper": "^0.4.1"
+    "react-timer-wrapper": "^0.4.1",
+    "rn-sliding-up-panel": "^2.4.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
